# mag_sim

./: .clang-format  .gitignore  404.html  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  custom_target_v0.dxf  index.html  mkdocs.yml  objects.inv  requirements-docs.txt  requirements-gui.txt  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
assets/javascripts/: mathjax-init.js
back_emf/: index.html
dc_commutated_motor/: index.html
dev_environment/: index.html
developer-guide/dev-environment/: index.html
developer-guide/implementation/flask-gui-progress/: index.html
developer-guide/implementation/progress/: index.html
developer-guide/implementation/solver-benchmarks/: index.html
developer-guide/implementation/status/: index.html
developer-guide/implementation/validation-stages/: index.html
developer-guide/math-and-solver/back-emf/: index.html
developer-guide/math-and-solver/fundamentals/: index.html
developer-guide/math-and-solver/overview/: index.html
developer-guide/math-and-solver/time-series/: index.html
docs/: back_emf.md  dc_commutated_motor.md  dev_environment.md  implementation_progress.md  implementation_status.md  index.md  math_and_solver.md  quickstart.md  solver_performance.md  three_phase_induction_motor.md  three_phase_pm_motor.md  three_phase_stator.md  time_series.md  torque_forces.md  validation_stages.md  visualization.md  vtk_output.md
docs/assets/css/: extra.css
docs/assets/javascripts/: mathjax.js
docs/developer-guide/: dev-environment.md
docs/developer-guide/implementation/: AGENTS.md  flask-gui-progress.md  solver-benchmarks.md  status.md  streamlit-progress.md
docs/developer-guide/math-and-solver/: back-emf.md  fundamentals.md  overview.md  time-series.md
docs/reference/: cli.md
docs/reference/equations/: electromagnetics.md  index.md  motor-models.md
docs/reference/file-formats/: scenario-json.md  vtk.md
docs/solver_benchmark/benchmark/: solver_scaling_summary.txt
docs/user-guide/: gui_flask.md  gui_streamlit.md  running-simulations.md  torque-and-forces.md
docs/user-guide/machines/: dc-commutated.md  induction.md  pm-synchronous.md  three-phase-stator.md
docs/user-guide/visualization/: comparison-sor-vs-cg.md  overview.md  vtk-output.md
implementation_progress/: index.html
implementation_status/: index.html
include/motorsim/: circuit.hpp  grid.hpp  ingest.hpp  io_csv.hpp  io_vtk.hpp  linops.hpp  mechanical.hpp  motorsim.hpp  probes.hpp  solver.hpp  types.hpp
inputs/: AGENTS.md  dc_motor_spinup_ci.json  iron_ring_demo.json  iron_ring_magnet_viz.json  line_current_interface.json  three_phase_stator_ci.json  two_wire_cancel.json
inputs/tests/: AGENTS.md  analytic_wire_test.json  back_emf_probe_test.json  current_region_turns_test.json  dc_commutator_test.json  dc_motor_spinup_test.json  diffusion_test.json  induction_spinup_test.json  line_current_interface_test.json  magnet_strip_test.json  mechanical_spinup_test.json  output_quantity_test.json  pm_motor_spinup_test.json  polygon_region_test.json  probe_output_test.json  rotor_ripple_test.json  skin_depth_test.json  timeline_frames_test.json  torque_validation_test.json  two_wire_cancel_test.json
math_and_solver/: index.html
python/: __init__.py  animate_three_phase.py  check_pm_spinup.py  check_three_phase_field.py  gen_dc_motor.py  gen_three_phase_induction_motor.py  gen_three_phase_pm_motor.py  gen_three_phase_stator.py  generate_rotor_animation.py  generate_solver_visualizations.py  rotor_animation.py  scenario_api.py  verify_vtk.py  visualize_scenario_field.py  visualize_wire.py  visualize_wire_field.py
python/examples/: two_wire_cancel.py
python/gui/: .gitignore  AGENTS.md  __init__.py  app_flask.py  app_streamlit.py  render.py
python/gui/templates/: base.html  index.html
quickstart/: index.html
reference/cli/: index.html
reference/equations/: index.html
reference/equations/electromagnetics/: index.html
reference/equations/motor-models/: index.html
reference/file-formats/scenario-json/: index.html
reference/file-formats/vtk/: index.html
scripts/: AGENTS.md  build_docs.sh  maintain_gui_env.sh  run_ci_checks.sh  setup_env.sh  setup_gui_env.sh
search/: search_index.json
solver_benchmark/benchmark/: cg_benchmark.csv  sor_benchmark.csv
solver_performance/: index.html
src/: main.cpp
src/motorsim/: circuit.cpp  grid.cpp  grid.hpp  ingest.cpp  io_csv.cpp  io_vtk.cpp  linops.cpp  mechanical.cpp  probes.cpp  solver.cpp  solver.hpp  types.hpp
tests/: analytic_wire_test.cpp  back_emf_probe_test.cpp  circuit_rk_test.cpp  current_region_turns_test.cpp  dc_commutator_test.cpp  dc_motor_spinup_test.cpp  diffusion_test.cpp  induction_spinup_test.cpp  line_current_interface_test.cpp  magnet_strip_test.cpp  mechanical_spinup_test.cpp  output_quantity_test.cpp  pm_motor_spinup_test.cpp  polygon_region_test.cpp  probe_output_test.cpp  progress_snapshot_test.cpp  rotor_animation_smoke.py  rotor_ripple_test.cpp  skin_depth_test.cpp  smoke_test.cpp  test_gui_flask.py  test_gui_streamlit.py  timeline_frames_test.cpp  torque_validation_test.cpp  two_wire_cancel_test.cpp  warm_start_prolongation_test.cpp
three_phase_induction_motor/: index.html
three_phase_pm_motor/: index.html
three_phase_stator/: index.html
time_series/: index.html
tools/: check_docs_math_blocks.py  solver_benchmark.cpp  solver_visualization_capture.cpp
torque_forces/: index.html
user-guide/gui_flask/: index.html
user-guide/machines/dc-commutated/: index.html
user-guide/machines/induction/: index.html
user-guide/machines/pm-synchronous/: index.html
user-guide/machines/three-phase-stator/: index.html
user-guide/running-simulations/: index.html
user-guide/torque-and-forces/: index.html
user-guide/visualization/comparison-sor-vs-cg/: index.html
user-guide/visualization/overview/: index.html
user-guide/visualization/vtk-output/: index.html
validation_stages/: index.html
visualization/: index.html
vtk_output/: index.html
